# cmd-shim

./: .gitignore  Cargo.toml
.github/workflows/: release.yml
src/: build-config.json.example  build_config.rs  callback.rs  main.rs
