
[package]
name = "cmd-shim"
version = "0.1.4"
authors = ["Dylan Hardison <dylan@hardison.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
axum = "0.5.4"
chrono = { version = "*", features = ["serde"] }
env_logger = "0.9.0"
keyring = "1"
log = "0.4.4"
oauth2 = "4.2"
portpicker = "0.1.1"
reqwest = { version = "0.11", features = ["json"] }
serde = "*"
serde_derive = "*"
serde_json = "*"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
